# RainbowRoad

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RECURSIVE_BITCOIN_STAKING.md  RainbowRoad.cabal  SYSTEM_ENHANCMENTS.md  config.ini
app/: Main.hs
src/: extension.js.map  extension.ts  haskellExtension.js  package-lock.json  package.json
src/Api/: RainbowAPI.hs
src/Ast/: ASTMapping.hs  ASTToRainbowToPLONK.hs  Processing.hs
src/Base/: BaseLayer.hs  Integration.hs
src/CrossChain/: CrossChain.hs  Defi.hs  Interoperability.hs  Protocol.hs
src/Encoding/: ASTandIR.hs  CharacterEncoding.hs  EncodingService.hs  OpCodeEncoding.hs  ProgLangEncoding.hs  RainbowCodeOptimization.hs  RainbowDecoder.hs  SmartContractEncoding.hs
src/Parsing/: CodeParsing.hs
src/Pipeline/: FullPipeline.hs
src/Plonk/: Circuit.hs  Custom.hs  Functions.hs  Gates.hs  PLONKInputProcessing.hs
src/Proofs/: PLONKProof.hs
src/RainbowBitcoin/: BitcoinAnchor.hs  BitcoinIntegration.hs  Merkle.hs  Network.hs  Script.hs  Staking.hs  Token.hs  TokenLocking.hs
src/RainbowCode/: Rainbow.hs
src/Types/: Types.hs
src/Visualize/: VisualAid.hs
src/Wiring/: Plonky2Integration.hs
src/Zkp/: ZkProofGeneration.hs  ZkProofVerification.hs  ZkRecursiveSubgraphHashCircuit.hs
