cabal-version:      2.4
name:               RainbowRoad
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Cryptskii
maintainer:         47649969+cryptskii@users.noreply.github.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md


executable RainbowRoad-exe
    hs-source-dirs:   app
    ghc-options:      -Wall   
    main-is:          Main.hs
    build-depends:    RainbowRoad,
                      base >=4.7 && <5,
                      megaparsec,
                      parser-combinators,
                      text,
                      servant >=0.18,
                      servant-server >=0.18,
                      warp,
                      wai,
                      ini,
                      deepseq,
                      binary,
                      zlib,
                      parsec,
                      base16-bytestring,
                      memory,
                      async,
                      hslogger,
                      process,
                      bytestring ^>=0.10.12.0,
                      cryptonite,
                      aeson ^>=1.5.6.0,
                      http-conduit ^>=2.3.8,
                      vector ^>=0.12.3.0,
                      containers ^>=0.6.4.1,
                      parallel ^>=3.2.2.0
    default-language: Haskell2010
 
library
    hs-source-dirs:   src
    exposed-modules:  Types.Types
                      Api.RainbowAPI
                      Base.BaseLayer
                      Base.Integration
                      RainbowCode.Rainbow
                      CrossChain.Interoperability
                      CrossChain.CrossChain
                      CrossChain.DeFi
                      Encoding.SmartContractEncoding
                      Encoding.OpCodeEncoding
                      Encoding.ASTandIR
                      Encoding.CharacterEncoding
                      Encoding.ProgLangEncoding
                      Encoding.EncodingService
                      Encoding.RainbowDecoder
                      Ast.ASTMapping
                      Ast.ASTToRainbowToPLONK
                      Ast.Processing
                      Parsing.CodeParsing
                      Plonk.Functions
                      Plonk.Gates
                      Plonk.Custom
                      Plonk.Circuit
                      Proofs.PLONKProof
                      Pipeline.FullPipeline
                      RainbowBitcoin.BitcoinAnchor
                      RainbowBitcoin.BitcoinIntegration
                      RainbowBitcoin.Merkle
                      RainbowBitcoin.Network
                      RainbowBitcoin.Token
                      RainbowBitcoin.TokenLocking
                      RainbowBitcoin.Staking
                      Visualize.VisualAid
                      Wiring.Plonky2Integration
                      Zkp.ZkRecursiveSubgraphHashCircuit
                      Zkp.ZkProofGeneration
    build-depends:    base >=4.7 && <5,
                      megaparsec,
                      parser-combinators,
                      text,
                      servant >=0.18,
                      servant-server >=0.18,
                      warp,
                      zlib,
                      wai,
                      memory,
                      binary,
                      deepseq,
                      base16-bytestring,
                      parsec,
                      hslogger,
                      async,
                      process,
                      bytestring ^>=0.10.12.0,
                      cryptonite,
                      aeson ^>=1.5.6.0,
                      http-conduit ^>=2.3.8,
                      vector ^>=0.12.3.0,
                      containers ^>=0.6.4.1,
                      parallel ^>=3.2.2.0
    default-language: Haskell2010
